Fixed a unique constraint
A few minor CSS and HTML changes

--- a/Data/templates/success.html
+++ b/Data/templates/success.html
@@ -85,7 +85,8 @@
   </header>
 
   <div class="form-container">
-    <p>Bestand geüpload naar de server. </p>
+    <p style="padding-bottom:30px">Bestand geüpload naar de server. </p>
+    <p>Check altijd wel even of de data correct is ingevoerd, anders meld het aub.</p>
   </div>
 
 </body>
