--- a/api/templates/chart.html
+++ b/api/templates/chart.html
@@ -34,6 +34,7 @@
     /*background-color: #0B6121;*/
     background-image: linear-gradient(-90deg, #95c11f 44%, #006633 100%);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    max-height:100px
   }
 
   #filter-form img {
